@@ -1,3 +1,8 @@
+2004-05-01 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-resource-dialog.c: implemented undo for resource note
+	in the resource editor dialog.
+
 2004-04-29  Xavier Ordoquy  <xordoquy@wanadoo.fr>
 
 	* libplanner/mrp-task-manager.c:
